@startuml

skinparam classAttributeIconSize 0
skinparam style strictuml

' ============================================================
' Classes
' ============================================================

class CSimulation
class CRender
class CMap
class CLoopReader

abstract class CRobot
class CWallFollower

class CWheel
class CTrail
class CRangeSensor

' ============================================================
' Inheritance
' ============================================================

CRobot <|-- CWallFollower

' ============================================================
' Simulation Ownership
' ============================================================

CSimulation "1" *-- "1" CRender
CSimulation "1" *-- "1" CMap
CSimulation "1" *-- "1" CWallFollower

' ============================================================
' Robot Ownership
' ============================================================

CRobot "1" *-- "2" CWheel
CRobot "1" *-- "1" CTrail

CWallFollower "1" *-- "2" CRangeSensor

' ============================================================
' Map Ownership
' ============================================================

CMap "1" *-- "1" CLoopReader

' ============================================================
' Non-Owning Relationships
' ============================================================

CWallFollower --> CMap : wall map
CRangeSensor --> CMap : ray query

CRobot --> CRender : draw robot
CMap --> CRender : draw walls
CTrail --> CRender : draw trail

@enduml